force-app/main/default/objects/Project__c/fields/Project_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Closed_Date__c</fullName>
    <label>Project Closed Date</label>
    <type>Date</type>
</CustomField>