force-app/main/default/objects/Project__c/fields/Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>Project_Duration__c</fullName>
    <label>Project Duration</label>
    <length>5</length>
    <type>Text</type>
</CustomField>