force-app/main/default/objects/Project__c/fields/Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Team_Members__c</fullName>
    <label>Team Members</label>
    <length>8</length>
    <type>Text</type>
</CustomField>